# fourre-tout

./: .gitignore  Cargo.toml  README.md
migrations/2019-02-14-130051_create_documents/: up.sql
migrations/2019-02-14-131932_create_models/: down.sql  up.sql
migrations/2019-02-14-150401_insert_base_model/: down.sql  up.sql
src/: db.rs  main.rs  model.rs  schema.rs
