[package]
name = "fourre-tout"
version = "1.0.0"
authors = ["Mickaël Leduque <mleduque@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.1", features = ["chrono", "postgres", "r2d2", "serde_json"] }
dotenv = "0.13.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"
r2d2 = "0.8.3"
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["json"] }
